Fixed horizontal scrolling on bikes.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -133,6 +133,8 @@ body{
 /* Products page */
 #products{
     padding: 0;
+    max-width: 100% !important;
+    overflow-x: hidden !important;
 }
 
 .bikes-img{
